# fhir-rs

./: Cargo.toml  README  README.md  expand.rs
definition/: Cargo.toml  profiles-resources-demo.xml  profiles-types.xml
definition/src/: generate_resource.rs  generate_type.rs  main.rs
example/: Cargo.toml
example/src/: main.rs
examples/fhirpath/: Cargo.toml
examples/fhirpath/src/: main.rs
examples/transform/: Cargo.toml  patient.json  testscript.xml
examples/transform/src/: main.rs
examples/validator/: Cargo.toml
examples/validator/src/: main.rs
fhir-derive/: Cargo.toml  README.md
fhir-derive/src/: backbone.rs  complex.rs  element.rs  extension.rs  helper.rs  lib.rs  primitive.rs  resource.rs
fhir-derive/src/helper/: mod.rs
fhir-resource-r5/: Cargo.toml  README.md
fhir-resource-r5/src/: lib.rs
fhir-resource-r5/src/resource/: account.rs  activity_definition.rs  actor_definition.rs  administrable_product_definition.rs  adverse_event.rs  allergy_intolerance.rs  appointment.rs  appointment_response.rs  artifact_assessment.rs  audit_event.rs  basic.rs  binary.rs  biologically_derived_product.rs  biologically_derived_product_dispense.rs  body_structure.rs  bundle.rs  capability_statement.rs  care_plan.rs  care_team.rs  charge_item.rs  charge_item_definition.rs  citation.rs  claim.rs  claim_response.rs  clinical_impression.rs  clinical_use_definition.rs  code_system.rs  communication.rs  communication_request.rs  compartment_definition.rs  composition.rs  concept_map.rs  condition.rs  condition_definition.rs  consent.rs  contract.rs  coverage.rs  coverage_eligibility_request.rs  coverage_eligibility_response.rs  detected_issue.rs  (+119 more)
fhir-rs/: Cargo.toml  README.md  README_zh_CN.md
fhir-rs/src/: expand.rs  lib.rs
fhir-rs/src/datatype/: anytype.rs  complex.rs  extension.rs  macros.rs  mod.rs  primitive.rs
fhir-rs/src/datatype/base/: datetime.rs  mod.rs  xhtml.rs
fhir-rs/src/datatype/complex/: mod.rs  narrative.rs
fhir-rs/src/datatype/primitive/: datetime.rs  mod.rs  xhtml.rs
fhir-rs/src/de/: json_deserializer.rs  mod.rs  xml_deserializer.rs
fhir-rs/src/error/: mod.rs
fhir-rs/src/fhirpath/: collection.rs  executor.rs  expression.rs  function.rs  mod.rs  parser.rs  tokenizer.rs
fhir-rs/src/fhirpath4/: collection.rs  executor.rs  expression.rs  macros.rs  mod.rs  parser.rs  tokenizer.rs
fhir-rs/src/resource/: mod.rs
fhir-rs/src/resource/r5/: account.rs  activity_definition.rs  actor_definition.rs  administrable_product_definition.rs  adverse_event.rs  allergy_intolerance.rs  appointment.rs  appointment_response.rs  artifact_assessment.rs  audit_event.rs  basic.rs  binary.rs  biologically_derived_product.rs  biologically_derived_product_dispense.rs  body_structure.rs  bundle.rs  capability_statement.rs  care_plan.rs  care_team.rs  charge_item.rs  charge_item_definition.rs  citation.rs  claim.rs  claim_response.rs  clinical_impression.rs  clinical_use_definition.rs  code_system.rs  communication.rs  communication_request.rs  compartment_definition.rs  composition.rs  concept_map.rs  condition.rs  condition_definition.rs  consent.rs  contract.rs  coverage.rs  coverage_eligibility_request.rs  coverage_eligibility_response.rs  detected_issue.rs  (+119 more)
fhir-rs/src/ser/: json_serializer.rs  mod.rs  xml_serializer.rs
fhir-rs/src/validate/: mod.rs  result.rs  validator.rs
fhir-rs/test/: test_json.rs  test_xml.rs
fhir-rs/tests/: deserialize.rs  encounter_example_02.xml  fhirpath.rs  parser.rs  patient-example.xml  profile-core-outpatient-encounter.xml  validate.rs
