[package]
name = "fhir-derive"
version = "0.0.3"
authors = ["Yanbo Ye <yeyanbo@me.com>"]
repository = "https://github.com/yeyanbo/fhir-rs.git"
homepage = "http://app.yeyanbo.cn/fhir-rs"
edition = "2021"

description = "FHIR-RS macro implementation"
readme = "README.md"
documentation = "https://docs.rs/fhir-rs"

keywords = ["hl7", "fhir", "healthcare", "rust"]
categories = ["web-programming", "development-tools", "parsing"]
license-file = "LICENSE"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0"
proc-macro2 = "1"
syn = { version = "2.0.27", features = ["extra-traits"] }

