[package]
name = "fhir-resource-r5"
version = "0.0.1"
authors = ["Yanbo Ye <yeyanbo@me.com>"]
repository = "https://github.com/yeyanbo/fhir-rs.git"
homepage = "http://app.yeyanbo.cn/fhir-rs"
edition = "2021"

description = "FHIR-RS library is an implementation of HL7 FHIR Specification for Rust."
readme = "README.md"
documentation = "https://docs.rs/fhir-rs"

keywords = ["hl7", "fhir", "healthcare", "rust"]
categories = ["web-programming", "development-tools", "parsing"]
license-file = "LICENSE"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = { version = "0.1.37", features = [] }
fhir-rs = { path = "../fhir-rs"}
anyhow = "1.0.75"