[package]
name = "fhir-rs"
version = "0.0.1"
authors = ["Yanbo Ye <yeyanbo@me.com>"]
repository = "https://github.com/yeyanbo/fhir-rs.git"
homepage = "http://app.yeyanbo.cn/fhir-rs"
edition = "2021"

description = "FHIR-RS library is an implementation of HL7 FHIR Specification for Rust."
readme = "README.md"
documentation = "https://docs.rs/fhir-rs"

keywords = ["hl7", "fhir", "healthcare", "rust"]
categories = ["web-programming", "development-tools", "parsing"]
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fhir-derive = { path = "../fhir-derive"}
tracing = "0.1.37"
thiserror = "1.0.50"
chrono = { version = "0.4.26", features = [] }
json-event-parser = "0.1.1"
xml-rs = "0.8.19"
